# lab1

lab_recursion/: CMakeLists.txt
lab_recursion/src/: main.cpp
lab_recursion/web/: index.html  lab_recursion.js  lab_recursion.wasm  script.js  style.css
